[package]
name = "ground-control-station"
version = "0.0.1"
edition = "2021"
description = "CanSat Ground Control Station."
authors = ["Jan Bronicki janbronicki@gmail.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]


[dev-dependencies]
