[package]
name = "ground-control-station"
version = "0.0.1"
edition = "2021"
description = "CanSat Ground Control Station."
authors = ["Jan Bronicki janbronicki@gmail.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
#clap = "4.0.27"
eframe = "0.19.0"
egui = "0.19.0"
serde = { version = "1", features = ["derive"] }
tracing-subscriber = "0.3.16"
rumqttc = "0.18.0"

[dev-dependencies]
ntest = "*"
mockall = "0.11.3"
#cargo-make = "*"
#cargo-audit = "*"
#cargo-modules = "*"
#cargo-deny = "*"
#cargo-license = "*"
#cargo-nextest = "*"
#cargo-deb = "*"
#cargo-rpm = "*"
#cargo-arch = "*"
#cargo-wix = "*"
#cargo-geiger = "*"
#cargo-show = "*"
#cargo-tarpaulin = "0.23.1"
#cargo-sonar = "0.14.1"
#cargo-why = "0.2.0"
#flamegraph = "0.6.2"
#inferno = "0.11.12"
#criterion = "0.4.0"